# Custom-SSH

./: Objectives.txt  infix to postfix.txt  test_commands  test_commands.txt
MySSH Client/: client_data.json
MySSH Client/include/: AES.h  client.h  json_functions.h  manage_keys.h  read_write.h  utils.h
MySSH Client/src/: base64.cpp  client.cpp  json_functions.cpp  manage_keys.cpp
MySSH Server/: server_data.json
MySSH Server/include/: AES.h  RSA.h  experimental.h  infix_to_postfix.h  multiple_commands.h  server.h  write_read.h
MySSH Server/src/: AES.cpp  base64.cpp  command_AST.cpp  exec_command.cpp  json_functions.cpp  server.cpp  write_read.cpp
SSHC/: CMakeLists.txt  client_data.json
SSHC/include/: AES.h  client_functions.h  json_functions.h  keys.h  manage_keys.h  string_operations.h  utils.h
SSHC/src/: AES.cpp  base64.cpp  client.cpp  client_functions.cpp  json_functions.cpp  keys.cpp  main.cpp  manage_keys.cpp  read_write.cpp  string_operations.cpp  utils.cpp
SSHS/: CMakeLists.txt  server_data.json
SSHS/include/: AES.h  base64.h  client_handler.h  command_AST.h  exec_command.h  infix_to_postfix.h  json_functions.h  multiple_commands.h  parse_command.h  rsa_key.h  server.h  server_functions.h
SSHS/src/: RSA.cpp  base64.cpp  client_handler.cpp  command_AST.cpp  exec_command.cpp  experimental.cpp  infix_to_postfix.cpp  json_functions.cpp  main.cpp  multiple_commands.cpp  parse_command.cpp  rsa_key.cpp  server.cpp  server_functions.cpp
SSH_C/: CMakeLists.txt  c  main.cpp
SSH_S/: CMakeLists.txt  main.cpp
